# pydough

./: pyproject.toml
scripts/: clean.sh  lint.sh  test.sh
