[tool.poetry]
name = "pydough"
version = "0.0.0"
description = "Cookie cutter with post creation template updates"
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
cookiecutter = "^1.6.0"

[tool.poetry.dev-dependencies]
vulture = "^1.0"
bandit = "^1.6"
safety = "^1.8"
isort = "^4.3"
flake8-bugbear = "^19.8"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.720.0"
ipython = "^7.7"
pytest-cov = "^2.7"
pytest-mock = "^1.10"
pep8-naming = "^0.8.2"
portray = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
